--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,6 @@
 </head>
 <body>
 
-    
-
 
 <h2>Добро пожаловать!</h2>
 
@@ -58,11 +56,8 @@ var drawPluginOptions = {
     },
 
     polyline: false,
-
     circle: false,
-
     rectangle: false,
-
     marker: false,
 
   },
@@ -81,7 +76,6 @@ var editableLayers = new L.FeatureGroup();
 mymap.addLayer(editableLayers);
 
 
-
 // Get coordinates from polygon
 mymap.on('draw:created', function(e) {
   var type = e.layerType,
@@ -95,11 +89,50 @@ mymap.on('draw:created', function(e) {
   editableLayers.addLayer(layer);
 });
 
+  mymap.addEventListener('draw:created', function openForm() {
+    document.getElementById("polygon_form").style.display = "block";  
+  }
+  )
+
+
+  </script>
+</div>
+
+<div>
+  <div class='form-popup' id='polygon_form' style="display: none;">
+    <form action="" method="post" class='form-container'>
+      {% csrf_token %}
+      {{ form.as_p }}
+      <input type="submit" class='btn btn-primary' value='Сохранить'>
+      <button type='submit' class='btn cancel' onclick='closeForm()'>Отмена</button>
+    </form>
+
+  </div>
+  <script>
+    function closeForm() {
+      document.getElementById("polygon_form").style.display = "none";
+    }
+
+    pol_form = document.getElementById("polygon_form");
+    pol_form.addEventListener('submit', (e) => {
+      e.preventDefault()
+      console.log('submitted')
+
+      $.ajax({
+        type: 'POST',
+        url: "{% url 'home' %}",
+        data: {
+          'name': name.value,
+          'coordinates': coordinates.value,
+        }
+      })
+    })
+
   </script>
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
 </body>
