--- a/templates/index.html
+++ b/templates/index.html
@@ -1,140 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
-    
-    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.4.10/leaflet.draw.js'></script>
-    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.4.10/leaflet.draw.css' rel='stylesheet' />
+{% extends 'base.html' %}
 
+{% block content %}
 
-    <title>Home Page</title>
-</head>
-<body>
+<h1>Welcome!</h1>
 
-
-<h2>Добро пожаловать!</h2>
-
-<div class='container'>
-<div id="mapid" style="height: 400px"></div>
-<script type="text/javascript">
-    var mymap = L.map('mapid').setView([55.7522200, 37.6155600], 13);
-
-    L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
-    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-    maxZoom: 18,
-    id: 'mapbox/streets-v11',
-    tileSize: 512,
-    zoomOffset: -1,
-    accessToken: 'pk.eyJ1IjoibWFyaWFpbWFuZ2FsaW5hIiwiYSI6ImNrZ3J4anNiaDA2YncydHA5dndlNGdld3gifQ.NrO6QfrsJEyB26UP8delaw'
-}).addTo(mymap);
-
-
-var editableLayers = new L.FeatureGroup();
-mymap.addLayer(editableLayers);
-
-var drawPluginOptions = {
-  position: 'topright',
-  draw: {
-
-    polygon: {
-      allowIntersection: false, // Restricts shapes to simple polygons
-      drawError: {
-        color: '#e1e100', // Color the shape will turn when intersects
-        message: '<strong>Polygon draw does not allow intersections!<strong> (allowIntersection: false)' // Message that will show when intersect
-      },
-      shapeOptions: {
-        color: '#bada55'
-      }
-    },
-
-    polyline: false,
-    circle: false,
-    rectangle: false,
-    marker: false,
-
-  },
-  edit: {
-    featureGroup: editableLayers, //REQUIRED!!
-    remove: false
-  }
-};
-
-
-// Initialise the draw control and pass it the FeatureGroup of editable layers
-var drawControl = new L.Control.Draw(drawPluginOptions);
-mymap.addControl(drawControl);
-
-var editableLayers = new L.FeatureGroup();
-mymap.addLayer(editableLayers);
-
-
-// Get coordinates from polygon
-mymap.on('draw:created', function(e) {
-  var type = e.layerType,
-    layer = e.layer;
-
-  if (type === 'polygon') {
-    var polygonCoordinates = layer._latlngs;
-    console.log(polygonCoordinates);
-  }
-
-  editableLayers.addLayer(layer);
-});
-
-  mymap.addEventListener('draw:created', function openForm() {
-    document.getElementById("polygon_form").style.display = "block";  
-  }
-  )
-
-
-  </script>
-</div>
-
-<div>
-  <div class='form-popup' id='polygon_form' style="display: none;">
-    <form action="" method="post" class='form-container'>
-      {% csrf_token %}
-      {{ form.as_p }}
-      <input type="submit" class='btn btn-primary' value='Сохранить'>
-      <button type='submit' class='btn cancel' onclick='closeForm()'>Отмена</button>
-    </form>
-
-  </div>
-  <script>
-    function closeForm() {
-      document.getElementById("polygon_form").style.display = "none";
-    }
-
-    pol_form = document.getElementById("polygon_form");
-    pol_form.addEventListener('submit', (e) => {
-      e.preventDefault()
-      console.log('submitted')
-
-      $.ajax({
-        type: 'POST',
-        url: "{% url 'home' %}",
-        data: {
-          'name': name.value,
-          'coordinates': coordinates.value,
-        }
-      })
-    })
-
-  </script>
-</div>
-
-
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
-</body>
-
-</html>
+{% endblock %}
