--- a/data/templates/data/map.html
+++ b/data/templates/data/map.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
-    <link rel="stylesheet" href="{% static 'css/map.css' %}">
+ 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
@@ -25,23 +26,27 @@
 <h2>Добро пожаловать!</h2>
 
 <div class='container'>
-<div id="mapid"></div>
-</div>
+  <div class='row'>
+    <div id="mapid" class='col-lg-8'></div>
 
-<div>
-  <div class='form-popup' id='polygon_form'>
-    <form action="" method="POST" class='form-container'>
+
+    <div class='col-lg-4'>
+      <div class='form-popup' id='polygon_form'>
+      <form action="" method="POST" class='form-container'>
       {% csrf_token %}
       {{ form.as_p }}
       <input type="submit" class='btn btn-primary' value='Сохранить'>
-      <button type='submit' class='btn cancel' onclick='closeForm()'>Отмена</button>
+      <button type='submit' class='btn btn-secondary cancel' onclick='closeForm()'>Отмена</button>
     </form>
 
   </div>
 
 </div>
+</div>
+</div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script type='text/javascript' src="{% static 'js/jquery-3.5.1.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script type='text/javascript' src="{% static 'js/map.js' %}"></script>
 </body>
