--- a/static/css/map.css
+++ b/static/css/map.css
@@ -1,10 +1,10 @@
 #mapid {
-    height: 400px;
+    height: 600px;
+    width: 900px;
+    
 }
 
 .form-popup {
     display: none;
-    position: fixed;
-    bottom: 0;
-    right: 14px;
+    border: 3px solid black;
 }
