--- a/data/templates/data/map.html
+++ b/data/templates/data/map.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+{% block css %}
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
@@ -17,13 +14,10 @@
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.4.10/leaflet.draw.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.4.10/leaflet.draw.css' rel='stylesheet' />
     
-
-    <title>Home Page</title>
-</head>
-<body>
+{% endblock %}
 
 
-<h2>Добро пожаловать!</h2>
+{% block content %}
 
 <div class='container'>
   <div class='row'>
@@ -35,6 +29,7 @@
       <form action="" method="POST" class='form-container'>
       {% csrf_token %}
       {{ form.as_p }}
+      <br>
       <input type="submit" class='btn btn-primary' value='Сохранить'>
       <button type='submit' class='btn btn-secondary cancel' onclick='closeForm()'>Отмена</button>
     </form>
@@ -45,10 +40,5 @@
 </div>
 </div>
 
-<script type='text/javascript' src="{% static 'js/jquery-3.5.1.js' %}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<script type='text/javascript' src="{% static 'js/map.js' %}"></script>
-</body>
+{% endblock %}
 
-</html>
