--- a/data/templates/data/map.html
+++ b/data/templates/data/map.html
@@ -26,7 +26,7 @@
 
     <div class='col-lg-4'>
       <div class='form-popup' id='polygon_form' style="display: none;">
-      <form action="" method="POST" class='form-container'>
+      <form action="" id='pol_form' method="POST" class='form-container'>
       {% csrf_token %}
       {{ form.as_p }}
       <br>
@@ -35,7 +35,6 @@
     </form>
 
   </div>
-
 </div>
 </div>
 </div>
