--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,31 @@
 </head>
 <body>
 
+    <div class='container'>
+        <nav class='navbar navbar-expand-lg navbar-light bg-secondary justify-content-between'>
+            <a href="{% url 'home'%}">ЛОГОТИП</a>
+            <ul class='navbar-nav'>
+                <li class='nav-item'><a class='nav-link' href="{% url 'data:map' %}">Карта</a></li>
+                <li class='nav-item'><a class='nav-link' href="#">to do</a></li>
+            </ul>
+        
+            <ul class='navbar-nav'>
+                {% if user.is_authenticated %}
+                    <li class='nav-item'><a class='nav-link' href="{% url 'account:profile' pk=user.pk %}">Личный кабинет</a></li>
+                    <li class='nav-item'><a class='nav-link' href="{% url 'account:logout' %}">Выйти</a></li>
+                {% else %}
+                    <li class='nav-item'><a class='nav-link' href="{% url 'account:login' %}">Войти</a></li>
+                {% endif %}
+            </ul>
+        
+        </nav>
+
+    
+
 
     {% block content %}
     {% endblock %}
-    
+    </div>
     <script type='text/javascript' src="{% static 'js/jquery-3.5.1.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
