--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -6,9 +7,9 @@
 
 <form method="POST">
     {% csrf_token %}
-    {% form.as_p %}
-
-    <input type="submit" value='SignUp'>
+    {{ form|crispy }}
+    <br>
+    <input type="submit" class='btn btn-primary' value='SignUp'>
 
 </form>
 
