--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,11 @@
             <ul class='navbar-nav'>
                 <li class='nav-item'><a class='nav-link' href="{% url 'data:map' %}">Карта</a></li>
                 <li class='nav-item'><a class='nav-link' href="#">to do</a></li>
+                {% if user.is_staff %}
+                    <li class='nav-item'><a class='nav-link' href="{% url 'admin:index' %}">Админ</a></li>
+                {% endif %}
             </ul>
+        
         
             <ul class='navbar-nav'>
                 {% if user.is_authenticated %}
