--- a/account/templates/account/user_detail.html
+++ b/account/templates/account/user_detail.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 
-<h2>Здрасте!</h2>
+
+<h1>{{ user.username }}</h1>
+<span>{{ user.expiration_date}}</span>
+
+<ul></ul>
+{% for pol in user.polygon.all %}
+    <p>{{ pol.name }}</p>
+
+{% endfor %}
 
 {% endblock %}
