add polygons to userpage and fix js to remove layer after send ajax

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -10,7 +10,8 @@
     {{ form|crispy }}
 <br>
     <input type="submit" class='btn btn-primary' value='Login'>
-    <input type="hidden" name='next' value='{{next_page}}'>
+    <input type="hidden" name="next" value="{{ next_page}}">
+
 </form>
 <br>
 
