--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
         
             <ul class='navbar-nav'>
                 {% if user.is_authenticated %}
-                    <li class='nav-item'><a class='nav-link' href="{% url 'account:profile' pk=user.pk %}">Личный кабинет</a></li>
+                    <li class='nav-item'><a class='nav-link' href="{% url 'account:userpage' pk=user.pk %}">Личный кабинет</a></li>
                     <li class='nav-item'><a class='nav-link' href="{% url 'account:logout' %}">Выйти</a></li>
                 {% else %}
                     <li class='nav-item'><a class='nav-link' href="{% url 'account:login' %}">Войти</a></li>
