--- a/account/templates/account/user_detail.html
+++ b/account/templates/account/user_detail.html
@@ -20,6 +20,7 @@
 <h4>Ваши полигоны:</h4>
 <a href="{% url 'data:map' %}" role='button' class='btn btn-primary' >Добавить полигон</a>
 <br>
+<br>
 <table class='table thead-light'>
     <thead class='thead-light'>
         <tr>
@@ -34,7 +35,7 @@
             <th scope='row'>{{ forloop.counter }}</td>
             <td>{{ pol.name }}</td>
             <td style='overflow: scroll'>{{ pol.coordinates }}</td>
-            <td><a href='#' role='button' class='btn btn-primary'>Удалить</a></td>
+            <td><a href="{% url 'data:remove' pk=pol.pk %}" class='btn btn-secondary'>Удалить</a></td>
         </tr>
         {% endfor %}
     
