--- a/account/templates/account/user_detail.html
+++ b/account/templates/account/user_detail.html
@@ -21,6 +21,11 @@
 <a href="{% url 'data:map' %}" role='button' class='btn btn-primary' >Добавить полигон</a>
 <br>
 <br>
+
+<form action="{% url 'data:search' %}">
+    <input name='q' type="text" placeholder="Search...">
+</form>
+
 <table class='table thead-light'>
     <thead class='thead-light'>
         <tr>
