add user_list and ended search

--- a/account/templates/account/user_detail.html
+++ b/account/templates/account/user_detail.html
@@ -24,8 +24,9 @@
 
 <form action="{% url 'data:search' %}">
     <input name='q' type="text" placeholder="Search...">
+    <input type="submit" class='btn btn-primary btn-sm' value='Найти'>
 </form>
-
+<br>
 <table class='table thead-light'>
     <thead class='thead-light'>
         <tr>
