--- a/data/templates/data/search_results.html
+++ b/data/templates/data/search_results.html
@@ -1,16 +1,29 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<br>
+<h4>Результаты поиска</h4>
+<br>
+<table class='table thead-light'>
+    <thead class='thead-light'>
+        <tr>
+            <th scope='col'>#</th>
+            <th scope='col'>Название</th>
+            <th scope='col'>Координаты</th>
+            <th scope='col'></th>
+        </tr>
+    </thead>
+        {% for pol in polygon_list %}
+        <tr>
+            <th scope='row'>{{ forloop.counter }}</td>
+            <td><b>{{ pol.name }}</b></td>
+            <td style='overflow: scroll'>{{ pol.coordinates }}</td>
+            <td><a href="{% url 'data:remove' pk=pol.pk %}" class='btn btn-secondary'>Удалить</a></td>
+        </tr>
+        {% endfor %}
+    
+</table>
 
-<ul>
-{% for polygon in polygon_list %}
-
-    <li>{{ polygon.name }}</li>
-
-{% endfor %}
-
-
-</ul>
-
+<a class='btn btn-primary' href="{% url 'account:userpage' pk=user.pk %}">Назад</a>
 
 {% endblock %}
