--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
                 <li class='nav-item'><a class='nav-link' href="#">to do</a></li>
                 {% if user.is_staff %}
                     <li class='nav-item'><a class='nav-link' href="{% url 'admin:index' %}">Админ</a></li>
+                    <li class='nav-item'><a class='nav-link' href="{% url 'account:all' %}">User List</a></li>
                 {% endif %}
             </ul>
         
