--- a/account/templates/account/user_detail.html
+++ b/account/templates/account/user_detail.html
@@ -37,7 +37,7 @@
             <th scope='col'>Площадь MIN</th>
             <th scope='col'>Площадь MAX</th>
             <th scope='col'></th>
-            <th scope='col'></th>
+            <th scope='col'>Разовая<br>выгрузка<br>за месяц</th>
             <th scope='col'></th>
         </tr>
     </thead>
@@ -53,7 +53,7 @@
 
             <td><a href="{% url 'data:update' pk=pol.pk %}" class='btn btn-primary btn-sm'>Изменить</a></td>
             
-            <td><a href="{% url 'data:get_df_now' pk=pol.pk %}" class='btn btn-primary btn-sm'>Выгрузка</a></td>
+            <td><a href="{% url 'data:get_df_now' pk=pol.pk %}" class='btn btn-primary btn-sm'>Отправить</a></td>
 
             <td><a href="{% url 'data:remove' pk=pol.pk %}" class='btn btn-secondary btn-sm'>Удалить</a></td>
         </tr>
