--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
     <div class='container'>
         <nav class='navbar navbar-expand-lg navbar-light bg-secondary justify-content-between'>
-            <a href="{% url 'home'%}">ЛОГОТИП</a>
+            <a href="{% url 'home'%}">LOGO</a>
             <ul class='navbar-nav'>
                 <li class='nav-item'><a class='nav-link' href="{% url 'data:map' %}">Карта</a></li>
                 <li class='nav-item'><a class='nav-link' href="#">to do</a></li>
@@ -38,10 +38,25 @@
         
         </nav>
 
-    
+    <br>
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <div class="alert alert-info alert-dismissible fade show" role="alert">{{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    <br>
 
 
     {% block content %}
+
+    
+
     {% endblock %}
     </div>
     <script type='text/javascript' src="{% static 'js/jquery-3.5.1.js' %}"></script>
