--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
     <div class='container'>
         <nav class='navbar navbar-expand-lg navbar-light bg-secondary justify-content-between'>
-            <a href="{% url 'home'%}">LOGO</a>
+            <a href="{% url 'home'%}"><img src="{% static 'pics/batman-logo-circle.png' %}" width="50" height="40"></a>
             <ul class='navbar-nav'>
                 <li class='nav-item'><a class='nav-link' href="{% url 'data:map' %}">Карта</a></li>
                 <li class='nav-item'><a class='nav-link' href="#">to do</a></li>
