--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,9 @@
 <body>
 
     <div class='container'>
-        <nav class='navbar navbar-expand-lg navbar-light bg-secondary justify-content-between'>
+        <nav class='navbar navbar-expand-lg navbar-dark bg-dark text-white font-weight-bold justify-content-between'>
             <a href="{% url 'home'%}"><img src="{% static 'pics/batman-logo-circle.png' %}" width="50" height="40"></a>
-            <ul class='navbar-nav'>
+            <ul class='navbar-nav text-white'>
                 <li class='nav-item'><a class='nav-link' href="{% url 'data:map' %}">Карта</a></li>
                 <li class='nav-item'><a class='nav-link' href="#">to do</a></li>
                 {% if user.is_staff %}
