--- a/data/templates/data/search_results.html
+++ b/data/templates/data/search_results.html
@@ -9,18 +9,34 @@
         <tr>
             <th scope='col'>#</th>
             <th scope='col'>Название</th>
-            <th scope='col'>Координаты</th>
+            <th scope='col'>Тип объявления</th>
+            <th scope='col'>Площадь MIN</th>
+            <th scope='col'>Площадь MAX</th>
+            <th scope='col'></th>
+            <th scope='col'>Разовая<br>выгрузка<br>за месяц</th>
             <th scope='col'></th>
         </tr>
     </thead>
         {% for pol in polygon_list %}
+ 
+        
         <tr>
             <th scope='row'>{{ forloop.counter }}</td>
-            <td><b>{{ pol.name }}</b></td>
-            <td style='overflow: scroll'>{{ pol.coordinates }}</td>
-            <td><a href="{% url 'data:remove' pk=pol.pk %}" class='btn btn-secondary'>Удалить</a></td>
+            <th>{{ pol.name }}</th>
+            <td>{{ pol.ads_type }}</td>
+            <td>{{ pol.min_area }}</td>
+            <td>{{ pol.max_area }}</td>
+
+            <td><a href="{% url 'data:update' pk=pol.pk %}" class='btn btn-primary btn-sm'>Изменить</a></td>
+            
+            <td><a href="{% url 'data:get_df_now' pk=pol.pk %}" class='btn btn-primary btn-sm'>Отправить</a></td>
+
+            <td><a href="{% url 'data:remove' pk=pol.pk %}" class='btn btn-secondary btn-sm'>Удалить</a></td>
         </tr>
+
         {% endfor %}
+
+
     
 </table>
 
