--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class='container'>
-        <nav class='navbar navbar-expand-lg navbar-dark bg-dark text-white font-weight-bold justify-content-between'>
+        <nav class='navbar navbar-expand-lg navbar-dark bg-dark text-white fixed-top font-weight-bold justify-content-between'>
             <a href="{% url 'home'%}"><img src="{% static 'pics/batman-logo-circle.png' %}" width="50" height="40"></a>
             <ul class='navbar-nav text-white'>
                 <li class='nav-item'><a class='nav-link' href="{% url 'data:map' %}">Карта</a></li>
@@ -58,6 +58,13 @@
     
 
     {% endblock %}
+
+
+
+
+
+
+
     </div>
     <script type='text/javascript' src="{% static 'js/jquery-3.5.1.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -65,6 +72,11 @@
     <script type='text/javascript' src="{% static 'js/map.js' %}"></script>
 
 
+    <footer style="height: 100px" class='footer sticky-top bg-dark text-muted'>
+        <div class='container-fluid'>
+            <div class='text-muted'>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        </div>
+    </footer>
 </body>
 
 </html>
