--- a/data/templates/data/search_results.html
+++ b/data/templates/data/search_results.html
@@ -12,26 +12,28 @@
             <th scope='col'>Тип объявления</th>
             <th scope='col'>Площадь MIN</th>
             <th scope='col'>Площадь MAX</th>
-            <th scope='col'></th>
-            <th scope='col'>Разовая<br>выгрузка<br>за месяц</th>
-            <th scope='col'></th>
+            <th scope='col'>Изменить</th>
+            <th scope='col'>Выгрузка<br>за месяц</th>
+            <th scope='col'>Экспорт<br>полигона</th>
+            <th scope='col'>Удалить</th>
         </tr>
     </thead>
         {% for pol in polygon_list %}
  
-        
         <tr>
             <th scope='row'>{{ forloop.counter }}</td>
             <th>{{ pol.name }}</th>
             <td>{{ pol.ads_type }}</td>
             <td>{{ pol.min_area }}</td>
             <td>{{ pol.max_area }}</td>
-
-            <td><a href="{% url 'data:update' pk=pol.pk %}" class='btn btn-primary btn-sm'>Изменить</a></td>
+        
+            <td><a href="{% url 'data:update' pk=pol.pk %}" class='btn btn-outline-light btn-sm'><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill-rule="evenodd" d="M17.263 2.177a1.75 1.75 0 012.474 0l2.586 2.586a1.75 1.75 0 010 2.474L19.53 10.03l-.012.013L8.69 20.378a1.75 1.75 0 01-.699.409l-5.523 1.68a.75.75 0 01-.935-.935l1.673-5.5a1.75 1.75 0 01.466-.756L14.476 4.963l2.787-2.786zm-2.275 4.371l-10.28 9.813a.25.25 0 00-.067.108l-1.264 4.154 4.177-1.271a.25.25 0 00.1-.059l10.273-9.806-2.94-2.939zM19 8.44l2.263-2.262a.25.25 0 000-.354l-2.586-2.586a.25.25 0 00-.354 0L16.061 5.5 19 8.44z"></path></svg></a></td>
             
-            <td><a href="{% url 'data:get_df_now' pk=pol.pk %}" class='btn btn-primary btn-sm'>Отправить</a></td>
+            <td><a href="{% url 'data:get_df_now' pk=pol.pk %}" class='btn btn-outline-light btn-sm'><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill-rule="evenodd" d="M1.75 3A1.75 1.75 0 000 4.75v14c0 .966.784 1.75 1.75 1.75h20.5A1.75 1.75 0 0024 18.75v-14A1.75 1.75 0 0022.25 3H1.75zM1.5 4.75a.25.25 0 01.25-.25h20.5a.25.25 0 01.25.25v.852l-10.36 7a.25.25 0 01-.28 0l-10.36-7V4.75zm0 2.662V18.75c0 .138.112.25.25.25h20.5a.25.25 0 00.25-.25V7.412l-9.52 6.433c-.592.4-1.368.4-1.96 0L1.5 7.412z"></path></svg></a></td>
 
-            <td><a href="{% url 'data:remove' pk=pol.pk %}" class='btn btn-secondary btn-sm'>Удалить</a></td>
+            <td><a href="{% url 'data:export' pk=pol.pk %}" class='btn btn-outline-light btn-sm'><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M4.97 11.03a.75.75 0 111.06-1.06L11 14.94V2.75a.75.75 0 011.5 0v12.19l4.97-4.97a.75.75 0 111.06 1.06l-6.25 6.25a.75.75 0 01-1.06 0l-6.25-6.25zm-.22 9.47a.75.75 0 000 1.5h14.5a.75.75 0 000-1.5H4.75z"></path></svg></a></td>
+
+            <td><a href="{% url 'data:remove' pk=pol.pk %}" class='btn btn-outline-light btn-sm'><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill-rule="evenodd" d="M16 1.75V3h5.25a.75.75 0 010 1.5H2.75a.75.75 0 010-1.5H8V1.75C8 .784 8.784 0 9.75 0h4.5C15.216 0 16 .784 16 1.75zm-6.5 0a.25.25 0 01.25-.25h4.5a.25.25 0 01.25.25V3h-5V1.75z"></path><path d="M4.997 6.178a.75.75 0 10-1.493.144L4.916 20.92a1.75 1.75 0 001.742 1.58h10.684a1.75 1.75 0 001.742-1.581l1.413-14.597a.75.75 0 00-1.494-.144l-1.412 14.596a.25.25 0 01-.249.226H6.658a.25.25 0 01-.249-.226L4.997 6.178z"></path><path d="M9.206 7.501a.75.75 0 01.793.705l.5 8.5A.75.75 0 119 16.794l-.5-8.5a.75.75 0 01.705-.793zm6.293.793A.75.75 0 1014 8.206l-.5 8.5a.75.75 0 001.498.088l.5-8.5z"></path></svg></a></td>
         </tr>
 
         {% endfor %}
