--- a/templates/base.html
+++ b/templates/base.html
@@ -72,11 +72,11 @@
     <script type='text/javascript' src="{% static 'js/map.js' %}"></script>
 
 
-    <footer style="height: 80px" class='footer sticky-top bg-dark text-muted'>
+<!--     <footer style="height: 80px" class='footer sticky-top bg-dark text-muted'>
         <div class='container-fluid'>
             <div class='text-muted'>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
         </div>
-    </footer>
+    </footer> -->
 
 </body>
 
