--- a/templates/index.html
+++ b/templates/index.html
@@ -3,41 +3,52 @@
 {% load static %}
 
 {% block content %}
+<br>
 <div class='container'>
-    <div class='jumbotron'>
-        <h2 class="display-4">Мониторинг рынка <br>коммерческой недвижимости</h2>
+    <div class='jumbotron shadow' style="background-image: url(pics/moscow_map.png);">
+        <h2 class="display-4">Мониторинг предложений <br> на рынке коммерческой недвижимости</h2>
         <hr class="my-4">
-        <p class='text-muted'>Новые объявления у вас на почте каждый час!</p>
+        <p class='text-muted'>Новые объявления у Вас на почте каждый час!</p>
     </div>
 </div>
 
-<div class="card-deck">
-    <div class="card border-light text-center">
-      <img class="card-img-top" height='100' width='100' src="{% static 'pics/map.svg' %}" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Источник</h5>
-        <p class="card-text">Выделите нужный полигон прямо на карте или загрузите готовый файл с координатами</p>
-        <a class='btn btn-secondary' href="{% url 'data:map' %}">Перейти на карту</a>
-      </div>
-    
-    </div>
-    <div class="card border-light text-center">
-      <img class="card-img-top" height='100' width='100' src="{% static 'pics/filter.svg' %}" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Фильтры</h5>
-        <p class="card-text">Вы можете настроить тип объявлений и необходимую площадь помещения</p>
-      </div>
-    </div>
-    <div class="card border-light text-center">
-      <img class="card-img-top" height='100' width='100' src="{% static 'pics/profiles.svg' %}" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Объем</h5>
-        <p class="card-text">Количество полигонов неограничено<br>Вы оплачиваете только подписку</p>
 
+<div>
+  <h3>Как это работает?</h3>
+  <br>
+  <div class="card-deck">
+      <div class="card border-light text-center">
+        <img class="card-img-top" height='100' width='100' src="{% static 'pics/map.svg' %}" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">1. Укажите территорию</h5>
+          <p class="card-text">Выделите интересующую Вас территорию на карте или загрузите файл с координатами</p>
+          
+        </div>
+      
       </div>
+      <div class="card border-light text-center">
+        <img class="card-img-top" height='100' width='100' src="{% static 'pics/filter.svg' %}" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">2. Настройте фильтры</h5>
+          <p class="card-text">Отметьте тип объявлений и площадь помещения</p>
+        </div>
+      </div>
+      <div class="card border-light text-center">
+        <img class="card-img-top" height='100' width='100' src="{% static 'pics/mail-send.svg' %}" alt="Card image cap">
+        <div class="card-body">
+
+          <h5 class="card-title">3. Готово!</h5>
+          <p class="card-text">Получайте на почту новые объявления с заданными параметрами</p>
+
+        </div>
+      </div>
+    </div>
+    <div class='d-flex justify-content-center'>
+      <a class='btn btn-secondary btn-lg btn-dark' href="{% url 'data:map' %}">Начать!</a>
     </div>
   </div>
 
+</div>
 </div>
 
 
